Refactored for initial deployment

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -11,22 +11,22 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$mean-course-primary: mat-palette($mat-indigo);
-$mean-course-accent: mat-palette($mat-pink, A200, A100, A400);
+$diary-app-primary: mat-palette($mat-indigo);
+$diary-app-accent: mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$mean-course-warn: mat-palette($mat-red);
+$diary-app-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$mean-course-theme: mat-light-theme((
+$diary-app-theme: mat-light-theme((
   color: (
-    primary: $mean-course-primary,
-    accent: $mean-course-accent,
-    warn: $mean-course-warn,
+    primary: $diary-app-primary,
+    accent: $diary-app-accent,
+    warn: $diary-app-warn,
   )
 ));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($mean-course-theme);
+@include angular-material-theme($diary-app-theme);
